K8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: real-estate
  template:
    metadata:
      labels:
        app: real-estate
    spec:
      containers:
        - name: real-estate-container
          image: y7ksh/real-estate-app:latest
          ports:
            - containerPort: 80
