K8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-service
spec:
  selector:
    app: real-estate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
